[package]
name = "tunnel-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tunnel-server"
path = "src/main.rs"

[dependencies]
tunnel-protocol = { path = "../tunnel-protocol" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
tower = "0.4"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
